<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_feed_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:background="@drawable/lable_bg_selector"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="16dp"
            android:text="@string/about_content" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/paint_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/button_h"
            android:padding="8dp"
            android:text="@string/topi"
            android:textColor="@color/progressbar_bg_color_1"
            android:textSize="10sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/paint_color" />

        <TextView
            android:id="@+id/androidLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/button_h"
            android:text="@string/androidLearn"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/paint_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/android_news1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/button_h"
            android:text="@string/android_news1"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/paint_color"
            android:visibility="visible" />

        <TextView
            android:id="@+id/android_news3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/button_h"
            android:text="@string/android_news3"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/paint_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/button_h"
            android:padding="8dp"
            android:text="@string/shengming"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />
    </LinearLayout>


</RelativeLayout>