<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/view_feed_toolbar" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/lable_bg_selector"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/info_title" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/paint_color" />

                <LinearLayout
                    android:id="@+id/github_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:minHeight="48dp"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/info_github" />

                    <TextView
                        android:id="@+id/github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/lable_selector"
                        android:drawableRight="@mipmap/arrow_right"
                        android:gravity="center"
                        android:padding="3dp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/paint_color" />

                <LinearLayout
                    android:id="@+id/desc_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/info_desc" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/lable_bg_selector"
                        android:gravity="left"
                        android:lineSpacingExtra="3dp"
                        android:lineSpacingMultiplier="1.2"
                        android:padding="@dimen/default_elevation" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_small_blue"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:text="@string/info_yunxing"
            android:layout_weight="2"
            android:textColor="@color/text_like_counter" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_small_blue"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>

